[package]
name = "kvs"
version = "0.1.0"
authors = ["jieweihh.yuan@gmail.com"]
description = "A key-value store"
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = "2.32.0"
failure = "0.1.8"   
serde = "1.0.140"  
serde_json = "1.0.82"   

[dev-dependencies]
assert_cmd = "0.11.0"
predicates = "1.0.0"
tempfile = "3.3.0"
walkdir = "2.2.7"