[package]
name = "kvs"
version = "0.1.0"
authors = ["jieweihh.yuan@gmail.com"]
description = "A key-value store"
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = "2.32.0"
failure = "0.1.8"   
serde = {version = "1.0.140",  features = ["derive"]}  
serde_json = "1.0.82"   
sled = "0.34.7"
structopt = "0.3.26"
log = "0.4.17"
env_logger="0.10.0"
[dev-dependencies]
assert_cmd = "0.11"
criterion = "0.3"
predicates = "1.0.0"
rand = "0.6.5"
tempfile = "3.0.7"
walkdir = "2.2.7"

